--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,1 @@
-inherit_gem:
-  rubocop-discourse: stree-compat.yml
+inherit_from: https://raw.githubusercontent.com/discourse/discourse/master/.rubocop.yml
