--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/eslint-parser": "^7.14.7",
-    "@ember/test-helpers": "^2.4.0",
-    "ember-template-lint": "^4.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-discourse": "^3.1.0",
-    "prettier": "^2.5.1",
-    "qunit": "^2.17.2"
+    "eslint-config-discourse": "*",
+    "prettier": "^2.8.8"
   }
 }
